# askgit

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  agno_agent_demo.py  alembic.ini  docker-compose.yml  pyproject.toml  search.ipynb  server.py
src/askgit/: models.py
src/askgit/alembic/: env.py
src/askgit/alembic/versions/: 5a9df0ee9f9d_initial_tables.py  9333a6579efa_hnsw_index.py  acecc40082bf_enable_extension.py
src/askgit/cli/: __init__.py  scrape_github.py
src/askgit/core/: config.py  db.py  utils.py
src/askgit/services/: __init__.py  embeddings.py  github_scraper.py  ingestion.py
